src/test/ui/mismatched_types/recovered-block.stderr
error: missing `struct` for struct definition
  --> $DIR/recovered-block.rs:11:8
   |
LL |     pub Foo { text }
   |        ^
   |
help: add `struct` here to parse `Foo` as a public struct
   |
LL |     pub struct Foo { text }
   |         ^^^^^^

error: expected one of `(` or `<`, found `{`
  --> $DIR/recovered-block.rs:17:9
   |
LL |     Foo { text: "".to_string() }
   |         ^ expected one of `(` or `<`

error: aborting due to 2 previous errors

